# ceda-demonstrations

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  notes.txt  python_requirements.txt
adr/: CMakeLists.txt  ad_2D_pirock_params.txt  adr_1D_pirock_params.txt  advection_diffusion_reaction.cpp  advection_diffusion_reaction.hpp  advection_diffusion_reaction_2d.cpp  advection_diffusion_reaction_2d.hpp  dr_adr_1D.f  dr_bruss2dadv.f  dr_bruss2dreac.f  pb_adr_1D.f  pb_bruss2dadv.f  pb_bruss2dreac.f  pirock.f  plot-adr1d.py  plot-adr2d.py  plotspectrum-adr1d.py  plotspectrum-adr2d.py  rd_2D_pirock_params.txt  runtests-adr1d.py  runtests-adr2d.py  runtests_pirock.py
adr_1D/: CMakeLists.txt  advection_diffusion_reaction.cpp  advection_diffusion_reaction.hpp  advection_diffusion_reaction_2d.cpp  advection_diffusion_reaction_2d.hpp  plot-adr1d.py  rock_copyright.txt  runtests-adr1d.py
adr_1D/pirock/: Makefile  README.md  dr_adr_1D.f  dr_bruss2dadv.f  dr_bruss2dnoise.f  dr_bruss2dreac.f  dr_comb.f  dr_pides.f  dr_pirock.f  namelist_read.txt  pb_adr_1D.f  pb_bruss2dadv.f  pb_bruss2dnoise.f  pb_bruss2dreac.f  pb_comb.f  pb_pides.f  pirock.f  plotpides.m  plotsol.m  rectp.f  runtests_adr_1D.py  zufall.f
diffusion_2D/: CMakeLists.txt  README.md  diffusion.cpp  diffusion_2D.cpp  diffusion_2D.hpp  initial.cpp  main.cpp  makeplots-diffusion2d.py  plot_data_2d.py  preconditioner_hypre.cpp  preconditioner_jacobi.cpp  runtests-diffusion2d.py  runtests.py
diffusion_2D/mpi_gpu/: CMakeLists.txt  diffusion.cpp  initial.cpp
diffusion_2D/mpi_serial/: CMakeLists.txt  diffusion.cpp
fd_diffusion/: CMakeLists.txt  fd_diffusion.c  plot_solution.py
gkeyll_diffusion/: Makefile  README.md  analytic_CR_test.c  gk_diffusion_1x1v_p1.c  nvector_gkylzero.c  nvector_gkylzero.h  plot-gk_diffusion_1x1v_p1.py  post_gk_diffusion.py  runtests-gk_diffusion_1x1v_p1.py  test_nvector_gkylzero.c
gkeyll_diffusion/scripts/: ATR_DEE_comparison_rtol_error.py  ATR_DEE_comparison_runtime_error.py  ATR_dee_maxiters_comparison.py  ATR_eigensafety_plots.py  ATR_error_vs_rtol.py  ATR_error_vs_runtime.py  ATR_rtol_fail_rate.py  ATR_rtol_fails.py  ATR_rtol_steps.py  ATR_rtol_vs_failrate_for_eigensafeties.py  ATR_rtol_vs_fails_for_each_eigsafety.py  FTR_SSP_blowups.py  FTR_computational_efficiency.py  FTR_eigensafety_plots_RKC.py  FTR_eigensafety_plots_RKL.py  Fig2_eigensafety_comparison.py  Fig3_dif_coefs_error_vs_fixtime.py  Fig4_normtypes_error_vs_rtol.py  Fig5_normtypes_efficiency.py  Fig6_normtypes_comparison.py  Fig7_DomEig_comparison.py  filter.py  filter_dee_maxiters.py  filter_eigsafety.py
gkeyll_diffusion/src/: input_handler.c  input_handler.h  nvector_gkylzero.c  nvector_gkylzero.h  post_gk_diffusion.py
results/adr_1D/: plot-adr1d.py  runtests-adr1d.py
results/adr_2D/: plot-adr2d.py  runtests-adr2d.py
results/diffusion_2D/: results_diffusion_2D.xlsx  results_diffusion_2D_fixedstep.xlsx
